--- a/MAS_PMSU/principal.Master
+++ b/MAS_PMSU/principal.Master
@@ -50,19 +50,13 @@
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                         <div class="bg-white py-2 collapse-inner rounded">
                             <a class="collapse-item" href="agregarMultiplicador.aspx"><i class="fa fa-clipboard"></i> Registro de multilplcadores</a>
-                       
+                        </div>
+                        <div class="bg-white py-2 collapse-inner rounded">
+                            <a class="collapse-item" href="agregarMultiplicador.aspx"><i class="fa fa-clipboard"></i> Registro de multilplcadores 2</a>
                         </div>
                     </div>
                 </li>
 
-
-
-
-
-             
-
-
-          
                 <li class="nav-item">
                     <a class="nav-link" href="#">
                         <i class="fas fa-light fa-file"></i>
