--- a/MAS_PMSU/principal.Master
+++ b/MAS_PMSU/principal.Master
@@ -55,6 +55,10 @@
                 </li>
 
                 <li class="nav-item">
+                    <a class="collapse-item" href="AgregarVehiculo.aspx"><i class="fa fa-clipboard"></i> <span>Registro Vehiculo</span></a>
+                </li>
+
+                <li class="nav-item">
                     <a class="nav-link" href="#">
                         <i class="fas fa-light fa-file"></i>
                         <span>Documentos</span>
