--- a/MAS_PMSU/principal.Master
+++ b/MAS_PMSU/principal.Master
@@ -54,8 +54,18 @@
                     </div>
                 </li>
 
-                <li class="nav-item">
-                    <a class="collapse-item" href="AgregarVehiculo.aspx"><i class="fa fa-clipboard"></i> <span>Registro Vehiculo</span></a>
+                <li class="nav-item" id="Li1" runat="server">
+                    <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapse3"
+                        aria-expanded="true" aria-controls="collapse3">
+                        <i class="fas fa-fw fa-folder"></i>
+                        <span>Motorista y Vehiculo</span>
+                    </a>
+                    <div id="collapse3" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+                        <div class="bg-white py-2 collapse-inner rounded">
+                            <a class="collapse-item" href="AgregarVehiculo.aspx"><i class="fa fa-clipboard"></i> Agregar Vehiculo</a>
+                            <a class="collapse-item" href="AgregarConductor.aspx"><i class="fa fa-clipboard"></i> Agregar Motorista</a>
+                        </div>
+                    </div>
                 </li>
 
                 <li class="nav-item">
