InscripcionLotes -- Creacion del Formulario

--- a/MAS_PMSU/principal.Master
+++ b/MAS_PMSU/principal.Master
@@ -50,6 +50,7 @@
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                         <div class="bg-white py-2 collapse-inner rounded">
                             <a class="collapse-item" href="agregarMultiplicador.aspx"><i class="fa fa-clipboard"></i> Registro de multilplicadores</a>
+                            <a class="collapse-item" href="InscripcionLotes.aspx"><i class="fa fa-clipboard"></i> Inscripcion de Lotes</a>
                         </div>
                     </div>
                 </li>
