--- a/MAS_PMSU/principal.Master
+++ b/MAS_PMSU/principal.Master
@@ -50,8 +50,8 @@
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                         <div class="bg-white py-2 collapse-inner rounded">
                             <a class="collapse-item" href="agregarMultiplicador.aspx"><i class="fa fa-clipboard"></i> Registrar Multilplicador</a>
-                            <a class="collapse-item" href="InscripcionLotes.aspx"><i class="fa fa-clipboard"></i> Inscripcion de Lotes</a>
-                            <a class="collapse-item" href="AgregraActadeRecibo.aspx"><i class="fa fa-clipboard"></i> Acta de Recibo de Producto</a>
+                            <a class="collapse-item" href="InscripcionLotes.aspx"><i class="fa fa-clipboard"></i> Inscripción de Lotes</a>
+                            <a class="collapse-item" href="AgregraActadeRecibo.aspx"><i class="fa fa-clipboard"></i> Actas de Recepción</a>
                         </div>
                     </div>
                 </li>
