--- a/MAS_PMSU/principal.Master
+++ b/MAS_PMSU/principal.Master
@@ -53,6 +53,7 @@
                             <a class="collapse-item" href="InscripcionLotes.aspx"><i class="fa fa-clipboard"></i> Inscripción de Lotes</a>
                             <a class="collapse-item" href="AgregraActadeRecibo.aspx"><i class="fa fa-clipboard"></i> Actas de Recepción</a>
                             <a class="collapse-item" href="CuadroProcesamiento.aspx"><i class="fa fa-clipboard"></i> Cuadro de Procesamiento</a>
+                            <a class="collapse-item" href="FichaPeso.aspx"><i class="fa fa-clipboard"></i> Ficha de Peso</a>
                         </div>
                     </div>
                 </li>
