--- a/MAS_PMSU/principal.Master
+++ b/MAS_PMSU/principal.Master
@@ -73,6 +73,20 @@
                     </div>
                 </li>
 
+                <li class="nav-item" id="Li2" runat="server">
+                    <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapse4"
+                        aria-expanded="true" aria-controls="collapse3">
+                        <i class="fas fa-fw fa-folder"></i>
+                        <span>Monitoreo y Control</span>
+                    </a>
+                    <div id="collapse4" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+                        <div class="bg-white py-2 collapse-inner rounded">
+                            <a class="collapse-item" href="MonitoreoPlagas.aspx"><i class="fa fa-clipboard"></i> Monitoreo de Plagas</a>
+                            <a class="collapse-item" href="ControlHRTo.aspx"><i class="fa fa-clipboard"></i> Control de HR y To</a>
+                        </div>
+                    </div>
+                </li>
+
                 <li class="nav-item">
                     <a class="nav-link" href="#">
                         <i class="fas fa-light fa-file"></i>
