--- a/MAS_PMSU/principal.Master
+++ b/MAS_PMSU/principal.Master
@@ -40,7 +40,29 @@
                 <hr class="sidebar-divider" />
                 <%--<div class="sidebar-heading" style="font-size: .50rem;">Departamentos</div>--%>
 
-                <!-- Opción: Proveeduria -->
+               
+
+
+
+                       <li class="nav-item" id="Li30" runat="server">
+                    <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapse31"
+                        aria-expanded="true" aria-controls="collapse3">
+                        <i class="fas fa-fw fa-folder"></i>
+                        <span> Indicadores</span>
+                    </a>
+                    <div id="collapse31" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+                        <div class="bg-white py-2 collapse-inner rounded">
+                            <a class="collapse-item" href="#"><i class="fa fa-clipboard"></i> Grafico 1</a>
+                            <a class="collapse-item" href="#"><i class="fa fa-clipboard"></i> Grafico 2</a>
+                        </div>
+                    </div>
+                </li>
+
+
+
+
+
+
                 <li class="nav-item" id="OpcProv" runat="server">
                     <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
                         aria-expanded="true" aria-controls="collapseTwo">
@@ -51,13 +73,51 @@
                         <div class="bg-white py-2 collapse-inner rounded">
                             <a class="collapse-item" href="agregarMultiplicador.aspx"><i class="fa fa-clipboard"></i> Registrar Multiplicador</a>
                             <a class="collapse-item" href="InscripcionLotes.aspx"><i class="fa fa-clipboard"></i> Inscripción de Lotes</a>
-                            <a class="collapse-item" href="AgregraActadeRecibo.aspx"><i class="fa fa-clipboard"></i> Actas de Recepción</a>
-                            <a class="collapse-item" href="CuadroProcesamiento.aspx"><i class="fa fa-clipboard"></i> Cuadro de Procesamiento</a>
-                            <a class="collapse-item" href="FichaPeso.aspx"><i class="fa fa-clipboard"></i> Ficha de Peso</a>
-                            <a class="collapse-item" href="Inventario.aspx"><i class="fa fa-clipboard"></i> Inventario</a>
+
                         </div>
                     </div>
                 </li>
+
+
+                   <li class="nav-item">
+                    <a class="nav-link" href="AgregraActadeRecibo.aspx">
+                        <i class="fas fa-light fa-file"></i>
+                        <span>Actas de recepción</span>
+                    </a>
+                </li>
+
+
+                  <li class="nav-item">
+                    <a class="nav-link" href="CuadroProcesamiento.aspx">
+                        <i class="fas fa-light fa-file"></i>
+                        <span>Cuadro de Procesamiento</span>
+                    </a>
+                </li>
+
+
+                   <li class="nav-item">
+                    <a class="nav-link" href="FichaPeso.aspx">
+                        <i class="fas fa-light fa-file"></i>
+                        <span>Ficha de Peso</span>
+                    </a>
+                </li>
+
+
+
+                   <li class="nav-item">
+                    <a class="nav-link" href="Inventario.aspx">
+                        <i class="fas fa-light fa-file"></i>
+                        <span>Inventario</span>
+                    </a>
+                </li>
+
+
+
+
+
+
+
+
 
                 <li class="nav-item" id="Li1" runat="server">
                     <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapse3"
